Implement full Heart and Dental functionality
